crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__reading_an_int_element_through_a_literal_key_carries_the_integer_unrendered.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:18
    v2 = const.int 0  ; int
    v3 = array.get v1, v2 ! bb1  ; int
    release v1
    release v0
    return v3
  bb1:
    release v1
    release v0
    propagate "m() at t.mwl:4"
}
