crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__straight_line_arithmetic_and_return.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn add(object, int, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    v2 = param 2  ; int
    ; stmt s0 @4:5-4:24
    v3 = add v1, v2  ; int
    ; stmt s1 @5:5-5:17
    release v0
    return v3
}
