crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__two_catch_clauses_lower_to_an_instanceof_chain_ending_in_a_rethrow.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @5:1-11:2
    ; stmt s1 @6:3-6:11
    v0 = class.desc T  ; classdesc
    v1 = call T::go(this: v0) ! bb3  ; void
    jump bb2
  bb1:
    v2 = take.thrown  ; object
    v3 = instanceof v2, LogicError  ; bool
    branch v3 -> bb4 (e0), bb5 (e1)
  bb2:
    return
  bb3:
    catch -> bb1
  bb4:
    ; stmt s2 @8:3-8:16
    v4 = const.str "logic"  ; string
    helper.echo_str v4 ! bb6
    release v4
    release v2
    jump bb2
  bb5:
    v5 = instanceof v2, IOError  ; bool
    branch v5 -> bb7 (e2), bb8 (e3)
  bb6:
    release v2
    propagate "<script>() at t.mwl:8"
  bb7:
    ; stmt s3 @10:3-10:13
    v6 = const.str "io"  ; string
    helper.echo_str v6 ! bb9
    release v6
    release v2
    jump bb2
  bb8:
    throw v2 -> bb10
  bb9:
    release v2
    propagate "<script>() at t.mwl:10"
  bb10:
    propagate "<script>() at t.mwl:10"
}
