crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__unary_and_comparison_operators.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn check(object, int) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:25
    v2 = neg v1  ; int
    v3 = const.int 0  ; int
    v4 = lt v2, v3  ; bool
    ; stmt s1 @5:5-5:18
    v5 = not v4  ; bool
    release v0
    return v5
}
